--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Pembuat WebGIS</h3>
+                    <h3 class="section-subheading text-muted">WebGIS Developer</h3>
                 </div>
                 <div class="center">
                     <div class="center">
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">"Dalam menuntut ilmu, kesantunan adalah kunci utama meraih pelajaran yang berharga."</p></div>
                 </div>
             </div>
         </section>
