--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     zoom out <img src="assets/img/lokasi/min.png" width="20px">, dan reset arah utara 
                                     <img src="assets/img/lokasi/north.jpg" width="20px"> untuk mengatur posisi peta.</span></p>
                                 <p><span>2. Titik biru huruf "A" merupakan titik lokasi Anda.</span></p>
-                                <p><span>3. Klik dua kali tombol "Lokasi Pesantren" untuk menampilkan lokasi Pondok Pesantren Al-Munawwir.</span></p>
+                                <p><span>3. Klik tombol "Lokasi Pesantren" untuk menampilkan lokasi Pondok Pesantren Al-Munawwir.</span></p>
                                 <p><span>4. Klik salah satu bangunan sebagai tujuan destinasi.</span></p>
                                 <p><span>5. Rute ditampilkan sebagai garis biru pada peta.</span></p>
                             </div>
